--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -3,6 +3,7 @@
     padding: 4re 0 2rem 0;
     color: #ffff;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
@@ -16,7 +17,7 @@
     padding: 24px;
 
 }
-.footer-subscription >p{
+.footer-subscription > p{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 
 }
@@ -56,20 +57,21 @@
     align-items: flex-start;
     margin: 16px;
     width: 160px;
+    text-align: left;
     box-sizing: border-box;
 }
 .footer-links-items h2{
     margin-bottom: 16px;
 
 }
-.footer-links-items>h2{
+.footer-links-items > h2{
     color: #fff;
 
 }
 .footer-links-items a{
     color: #fff;
     text-decoration: none;
-    margin-bottom: 6px;
+    margin-bottom: 8px;
 }
 .footer-links-items a:hover{
     color: #e9e9e9;
